tests/negative_fixtures/array_type_mismatch.shx
let flags: boolean[] = [true, false, "Test"];
console.log(flags);
